--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - 'main' 
-    tags:
-      - 'v1.0.0' # Run workflow on version tags, e.g. v1.0.0.
+    # tags:
+    #   - 'v1.0.0' # Run workflow on version tags, e.g. v1.0.0.
 
 jobs:
   package-source:
