--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,14 +44,24 @@ jobs:
         run: |
           zip -r ${{ steps.metadata.outputs.source-archive }} . -x "*.git*"
 
-      - name: Create release
-        uses: softprops/action-gh-release@v1
-        with:
-          tag_name: ${{ github.ref }}
-          name: "Release v${{ steps.metadata.outputs.plugin-version }}"
-          body: "Source code for version ${{ steps.metadata.outputs.plugin-version }}"
-          token: ${{ secrets.GITHUB_TOKEN }}
-          draft: true
-          files: |
-            ./${{ steps.metadata.outputs.source-archive }}
+      # - name: Create release
+      #   uses: softprops/action-gh-release@v1
+      #   with:
+      #     tag_name: ${{ github.ref }}
+      #     name: "Release v${{ steps.metadata.outputs.plugin-version }}"
+      #     body: "Source code for version ${{ steps.metadata.outputs.plugin-version }}"
+      #     token: ${{ secrets.GITHUB_TOKEN }}
+      #     draft: true
+      #     files: |
+      #       ./${{ steps.metadata.outputs.source-archive }}
 
+      - name: Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: >-
+          gh release create ${{ github.ref_name }}
+        "release.zip#Whatever you want to call this artifact"
+        --generate-notes
+        --title "Version ${{ github.ref_name }} (or some other name)"
+
+        
